--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 
     <h2>Other</h2>
     <ul>
-        <li><button><a href="./other/hobbies.html" target="_blank">Interests and Hobbies</a></button></li>
-        <li><button><a href="./other/causes.html" target="_blank">Causes I Support</a></button></li>
-        <li><button><a href="./other/contact.html" target="_blank">Contact Me</a></button></li>
+        <li><button><a href="./other/hobbies.html">Interests and Hobbies</a></button></li>
+        <li><button><a href="./other/causes.html">Causes I Support</a></button></li>
+        <li><button><a href="./other/contact.html">Contact Me</a></button></li>
     </ul>
 
     <footer>
