--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         background. My professional experience, so far, has helped me to gain and polish my management skills 
         by meeting task deadlines in a dynamic fast-paced environment, public dealing with consumers, and 
         raising employee morale. Moreover, my technical background has made me a critical thinker, problem solver, 
-        and change maker. With all these skills combined with a proactive personal attitude, I am seeking a role in 
+        and a change maker. With all these skills combined with a proactive personal attitude, I am seeking a role in 
         a workplace where I will get opportunities to learn and grow, and where I will be considered an asset rather 
         than a liability.
     </p>
