--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
     
     <h2>Summary</h2>
     <p>
-        I am an ambitious, persistent, and highly personable individual with a diverse educational and professional 
-        background. My professional experience, so far, has helped me to gain and polish my management skills 
-        by meeting task deadlines in a dynamic fast-paced environment, public dealing with consumers, and 
-        raising employee morale. Moreover, my technical background has made me a critical thinker, problem solver, 
-        and a change maker. With all these skills combined with a proactive personal attitude, I am seeking a role in 
-        a workplace where I will get opportunities to learn and grow, and where I will be considered an asset rather 
-        than a liability.
+        I am an ambitious, persistent, and highly personable individual with a diverse educational and professional background.
+        My professional experience, so far, has helped me to gain and polish my interpersonal skills by teaching, mentoring,
+        doing research, acquiring sales, meeting task deadlines in a dynamic fast-paced environment, public dealing with
+        consumers, and raising employee morale. Moreover, my technical background has made me a critical thinker, problem solver,
+        and a change maker. With all these skills combined with a proactive personal attitude, I am looking forward to work for an
+        organization where I will get opportunities to learn and grow, and where I will be considered an asset rather than a liability.
     </p>
 
     <hr />
@@ -47,7 +46,7 @@
             <p>January 2022 - June 2022</p>
             <ul>
                 <li>Performed sizing and selection of Baker Hughes Consolidated Pressure Safety/Relief Valves, Thermal Relief Valves, and Masoneilan Control Valves, for both valve units and spares.</li>
-                <li>Worked on a project for condition monitoring, data acquisition, and evaluation of over 100 Control Valves at Pakistan Refinery Limited, for preventive maintenance and replacement.</li>
+                <li>Worked on a project for condition monitoring, data acquisition, and evaluation of over 100 Control Valves at PRL - Pakistan Refinery Limited, for preventive maintenance and replacement.</li>
                 <li>Handled sales inquiries, maintained follow-ups and sales records, and made commercial quotations.</li>
             </ul>
         </li>
