--- a/other/hobbies.html
+++ b/other/hobbies.html
@@ -1,5 +1,6 @@
 <h1>My Hobbies</h1>
 <ol>
+    <li>STEM</li>
     <li>Renewable Energy Technologies</li>
     <li>Environmental Remediation</li>
     <li>Mathematical Modeling and Simulation</li>
@@ -7,7 +8,9 @@
     <li>Squash</li>
     <li>Cricket</li>
     <li>Movies</li>
+    <li>Piano</li>
     <li>Photography</li>
+    <li>Touring</li>
     <li>Hiking</li>
 </ol>
 <hr />
